# LSS-ROS2-Arms

./: .gitignore  README.md  required.repos
lss_arm/: CMakeLists.txt  package.xml
lss_arm_description/: CMakeLists.txt  package.xml
lss_arm_description/cmake/environment_hooks/: ign_gazebo_resource_path.bash
lss_arm_description/config/: initial_joint_positions.yaml
lss_arm_description/launch/: view.launch.py  view_gz.launch.py  view_ign.launch.py  view_sim.launch.py
lss_arm_description/lss_arm/: model.sdf
lss_arm_description/lss_arm/meshes/collision/: end_effector_l.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
lss_arm_description/lss_arm/meshes/visual/: end_effector_l.STL  link_1.STL  link_2.STL  link_4.STL
lss_arm_description/models/lss_arm_4dof/: model.config
lss_arm_description/models/lss_arm_4dof/meshes/collision/: finger_r.STL  link_0.STL  link_1.STL  link_2.STL  link_4_4dof.STL  lss_base.STL
lss_arm_description/models/lss_arm_4dof/meshes/visual/: link_3.STL
lss_arm_description/models/lss_arm_5dof/: model.config
lss_arm_description/models/lss_arm_5dof/meshes/collision/: finger_l.STL  link_3.STL  link_4_5dof.STL  link_5_5dof.STL
lss_arm_description/rviz/: view.rviz
lss_arm_description/scripts/: xacro2sdf.bash  xacro2urdf.bash
lss_arm_description/urdf/: lss_arm.gazebo  lss_arm.ros2_control  lss_arm.urdf.xacro  lss_arm.xacro  lss_arm_inertial.xacro  lss_arm_utils.xacro  lss_gripper.xacro  lss_gripper_4dof.xacro  lss_gripper_5dof.xacro
lss_arm_description/worlds/: empty.sdf
lss_arm_moveit/: CMakeLists.txt  package.xml
lss_arm_moveit/config/: controllers_5dof.yaml  controllers_position.yaml  joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  moveit_controllers_5dof.yaml  ompl_planning.yaml  servo.yaml
lss_arm_moveit/launch/: fake_arm_control.launch.py  ign_arm_control.launch.py  move_arm.launch.py  real_arm_control.launch.py  sim_arm_control.launch.py
lss_arm_moveit/rviz/: moveit.rviz
lss_arm_moveit/scripts/: xacro2srdf.bash
lss_arm_moveit/srdf/: lss_arm.srdf.xacro  lss_arm.xacro  lss_arm_gripper.xacro  lss_gripper.xacro
lss_gz_moveit_example/: CMakeLists.txt  package.xml
lss_gz_moveit_example/launch/: default.launch.py  ex_cpp_follow_target.launch.py
lss_gz_moveit_example/launch/robots/: robot_lss_arm.launch.py
lss_gz_moveit_example/launch/worlds/: world_default.launch.py  world_follow_target.launch.py
lss_ign_moveit_example/: CMakeLists.txt  package.xml
lss_ign_moveit_example/examples/cpp/: ex_follow_target.cpp
lss_ign_moveit_example/launch/: default.launch.py  ex_cpp_follow_target.launch.py
lss_ign_moveit_example/launch/robots/: robot_lss_arm.launch.py
lss_ign_moveit_example/launch/worlds/: world_follow_target.launch.py
lss_ign_moveit_example/rviz/: lss_ign_moveit.rviz
lss_ign_moveit_example/worlds/: follow_target.sdf
lss_sim_moveit_example/: CMakeLists.txt  package.xml
lss_sim_moveit_example/examples/cpp/: ex_follow_target.cpp
lss_sim_moveit_example/launch/: default.launch.py  ex_cpp_follow_target.launch.py
lss_sim_moveit_example/launch/worlds/: world_default.launch.py  world_follow_target.launch.py
lss_sim_moveit_example/worlds/: follow_target.sdf
tb4_lss_arm/lss_arm_description/: CMakeLists.txt  package.xml
tb4_lss_arm/lss_arm_description/launch/: robot_description.launch.py
tb4_lss_arm/lss_arm_description/meshes/: end_effector_l_light.stl  end_effector_r_light.stl  link_0_light.stl  link_1_light.stl  link_4_light.stl
tb4_lss_arm/lss_arm_description/meshes/collision/: link_2.STL  link_3.STL  link_4.STL
tb4_lss_arm/lss_arm_description/urdf/lss_arm/: lss_arm.urdf.xacro
tb4_lss_arm/lss_arm_description/urdf/tb4_lss_arm/: tb4_lss_arm.urdf.xacro
tb4_lss_arm/lss_arm_moveit/: CMakeLists.txt  package.xml
tb4_lss_arm/lss_arm_moveit/config/: fake_controllers.yaml  gripper.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lss_4dof_arm.srdf  lss_arm.ros2_control.xacro  lss_arm.srdf.xacro  lss_arm.urdf.xacro  lss_arm.xacro  lss_arm_gripper.srdf.xacro  lss_controllers.yaml  lss_gripper.ros2_control.xacro  lss_gripper_controllers.yaml  lss_ros_controllers.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
tb4_lss_arm/lss_arm_moveit/launch/: demo.launch.py  moveit_rviz.py
tb4_lss_arm/lss_arm_viz/: CMakeLists.txt
tb4_lss_arm/lss_arm_viz/config/: joint_names_lss_4dof_arm.yaml
tb4_lss_arm/lss_arm_viz/rviz/: model.rviz  robot.rviz
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/: ign_moveit2.repos
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm/: CMakeLists.txt  package.xml
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_moveit/: package.xml
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_moveit/config/: controllers_effort.yaml  controllers_position,velocity.yaml  controllers_position.yaml  controllers_velocity.yaml  joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  servo.yaml
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_moveit/launch/: ex_fake_control.launch.py  ex_ign_control.launch.py  move_group.launch.py
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_moveit/rviz/: moveit.rviz
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_moveit/scripts/: xacro2srdftb4.bash
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_moveit/srdf/: lss_arm.srdf  lss_arm.srdf.xacro  lss_arm.xacro  lss_arm_gripper.xacro  tb4_lss_arm.srdf  tb4_lss_arm.srdf.xacro  tb4_lss_arm.xacro
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_viz/: package.xml
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_viz/config/: joint_names_lss_4dof_arm.yaml
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_viz/launch/: display_robot.launch.py
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit2/lss_arm_viz/rviz/: model.rviz  robot.rviz
tb4_lss_arm/lss_ign_moveit/lss_ign_moveit_example/: package.xml
tb4_lss_arm/tb4_lss_simulator/: dependencies.repos
tb4_lss_arm/tb4_lss_simulator/tb4_lss_ignition_bringup/: CMakeLists.txt  package.xml
tb4_lss_arm/tb4_lss_simulator/tb4_lss_simulator/: CMakeLists.txt  package.xml
(+37 files in other folders)
