<?xml version="1.0"?>
<package format="3">
  <name>lss_arm</name>
  <version>1.0.0</version>
  <description>Metapackage for LSS 4DoF/5DoF Arms</description>
  <author>Geraldine Barreto</author>
  <maintainer email="gbarreto@robotshop.com"/>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>lss_arm_description</build_depend>
  <build_depend>lss_arm_moveit</build_depend>
  <build_depend>lss_ign_moveit_example</build_depend>
  <build_depend>xacro</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
