<?xml version="1.0"?>
<package format="3">
  <name>lss_arm_moveit</name>
  <version>1.0.0</version>
  <description>
     Package with all the configuration and launch files for using the lss_4dof_arm with the MoveIt Motion Planning Framework
  </description>
  <author email="geraldinebc94@gmail.com">Geraldine Barreto</author>
  <maintainer email="geraldinebc94@gmail.com">Geraldine Barreto</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lss_arm_description</exec_depend>
  <!-- disabled to remove circular dependencies
  run_depend>moveit_ros_move_group</exec_depend>
  <run_depend>moveit_fake_controller_manager</exec_depend>
  <run_depend>moveit_kinematics</exec_depend>
  <run_depend>moveit_planners_ompl</exec_depend>
  <run_depend>moveit_ros_visualization</exec_depend>

  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend> -->

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
   -->
  <exec_depend>xacro</exec_depend>
  <!-- The next 2 packages are required for the gazebo simulation.
       We don't include them by default to prevent installing gazebo and all its dependencies. -->
  <!-- <run_depend>joint_trajectory_controller</run_depend> -->
  <!-- <run_depend>gazebo_ros_control</run_depend> -->
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
