<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb4_lss_simulator</name>
  <version>0.1.1</version>
  <description>TB4 + LSS Arm Ignition Bringup</description>
  <maintainer email="geraldinebc94@gmail.com">Geraldine Barreto</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tb4_lss_ignition_bringup</depend>
  <!-- <depend>tb4_lss_ignition_gui_plugins</depend>
  <depend>tb4_lss_ignition_toolbox</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
