<?xml version="1.0"?>
<package format="3">
  <name>lss_arm_moveit</name>
  <version>1.0.0</version>
  <description>
     Package with all the configuration and launch files for using the LSS 4DoF Arm with the MoveIt Motion Planning Framework
  </description>
  <author email="geraldinebc94@gmail.com">Geraldine Barreto</author>
  <maintainer email="geraldinebc94@gmail.com">Geraldine Barreto</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lss_arm_description</exec_depend>

  <!-- TODO: Remove backward_ros from dependencies once moveit includes it properly -->
  <exec_depend>backward_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
