<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lss_arm_viz</name>
  <version>1.0.0</version>
  <description>Provides common launch and configuration scripts for a simulated TB4 + LSS Arm.</description>
  <maintainer email="geraldinebc94@gmail.com">Geraldine Barreto</maintainer>
  <license>BSD</license>

  <author>Geraldine Barreto</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rviz2</depend>
  <depend>rqt_robot_monitor</depend>
  <depend>turtlebot4_description</depend>
  <depend>lss_arm_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
